@@ -2,7 +2,8 @@
 Version 3.1.1
 =============================================================
 
-    - Feature: Optimization of the order recovery system
+    - Feature: [import] Optimization of the order recovery system
+    - Feature: [import] Setting up a cache for synchronizing catalogs ids
 
 =============================================================
 Version 3.1.0
